[package]
name = "pgdatetime"
version = "0.3.0"
authors = ["Ivor Huang <ivorhuang_hjd@163.com>", "David Li <davidli2010@foxmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
description = "SQL date/time types written in Rust, compatible with PostgreSQL's date/time types."
keywords = ["date", "timestamp", "time", "interval", "postgres"]
repository = "https://github.com/cod-technologies/pgdatetime.git"
homepage = "https://github.com/cod-technologies/pgdatetime"
documentation = "https://docs.rs/pgdatetime/"

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

[[bench]]
name = "benchmark"
harness = false
